gaps and shadow fixed

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -250,6 +250,9 @@
 .card-container .cards{
 
     text-align: center;
+    padding: 69.5px 0 16px;
+    box-shadow: 0 6px 50px #0000002c;
+
 
 }
 
@@ -258,7 +261,10 @@
     background-color: #F95555;
     height: 32px;
     width: 32px;
-    margin: 69.5px auto 16px;
+    margin: 0  auto ;
+    border: 60px;
+    border-radius: 100%;
+    
 
 }
 .cards h3{
@@ -427,23 +433,42 @@
 footer{
 
     background-color: #001931;
+    padding: 120px 0 30px;
 
 }
 .fnav{
 
     width: 85%;
     max-width: 1360px;
-    margin: 120px auto 80px;
+    margin: 0px auto 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
 
 }
+.fnav .icons-con{
+
+    color: #FFFFFF;
+
+}
 
 .copy{
+    width: 85%;
+    max-width: 1360px;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    margin: 80px auto 0px;
+    
 
+}
+.copy p{
+    color: #FAFAFA;
+    font-size: 16px;
+    line-height: 24px;
+    padding-top: 30px;
+    
 }
 
 
